--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -4,20 +4,38 @@ pipeline {
         stage('Build') { 
             steps {
                 script {
-                        def customImage = docker.build("my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
-                    }
+                withCredentials([string(credentialsID: 'docker_user', verible: 'DOCKER_USER'),
+                              string(credentialsID: 'docker_pass', verible: 'DOCKER_PASS')]) {
+                sh "echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin"
+                docker.withRegistry("https://index.docker.io/") {
+                    def customImage = docker.build("my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
+                    costomImage.push()
+                    costomImage.push 'latest'
+                }
+               }
             }
-         
-        }
-        stage('Run step') { 
-            steps {
-                script {
-                    sh "docker run -tid -p 80:80 my-image:${env.BUILD_ID}"
-// docker.image("my-image:${env.BUILD_ID}").withRun('-p 2222:80') {
-// * do things */
-//                        }
-                  }  
-             }
+            }
         }
     }
 }
+
+
+
+
+
+//                 script {
+//                         def customImage = docker.build("my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
+//                     }
+//             }
+         
+//         }
+//         stage('Run step') { 
+//             steps {
+//                 script {
+//                     sh "docker run -tid -p 80:80 my-image:${env.BUILD_ID}"
+
+//                   }  
+//              }
+//         }
+//     }
+// }
