--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -4,11 +4,11 @@ pipeline {
         stage('Build') { 
             steps {
                 script {
-                withCredentials([string(credentialsID: 'docker_user', verible: 'DOCKER_USER'),
-                              string(credentialsID: 'docker_pass', verible: 'DOCKER_PASS')]) {
+                withCredentials([string(credentialsId: 'docker_user', verible: 'DOCKER_USER'),
+                              string(credentialsId: 'docker_pass', verible: 'DOCKER_PASS')]) {
                 sh "echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin"
                 docker.withRegistry("https://index.docker.io/") {
-                    def customImage = docker.build("my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
+                    def customImage = docker.build("${DOCKER_USER}/my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
                     costomImage.push()
                     costomImage.push 'latest'
                 }
