--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
        stage('build step') { 
            steps {
                script {
-               withCredentials([string(credentialsid: 'docker_user', verible: 'DOCKER_USER'),
-                            string(credentialsid: 'docker_pass', verible: 'DOCKER_PASS')]) {
+               withCredentials([string(credentialsId: 'docker_user', verible: 'DOCKER_USER'),
+                            string(credentialsId: 'docker_pass', verible: 'DOCKER_PASS')]) {
                sh "echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin"
                docker.withRegistry("https://index.docker.io/v1/") {
                    def customImage = docker.build("${DOCKER_USER}/my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
