--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,11 +1,16 @@
 pipeline {
     agent any 
+    environment { 
+3        DOCKER_USER = 'docker_user' 
+4        DOCKER_PASS = 'docker_pass'
+6    }
     stages {
        stage('build step') { 
            steps {
                script {
-               withCredentials([string(credentialsId: 'docker_user', verible: 'DOCKER_USER'),
-                            string(credentialsId: 'docker_pass', verible: 'DOCKER_PASS')]) {
+
+            //    withCredentials([string(credentialsId: 'docker_user', verible: 'DOCKER_USER'),
+            //                 string(credentialsId: 'docker_pass', verible: 'DOCKER_PASS')]) {
                sh "echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin"
                docker.withRegistry("https://index.docker.io/v1/") {
                    def customImage = docker.build("${DOCKER_USER}/my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
@@ -17,7 +22,7 @@ pipeline {
          }
       }
    }
-}
+
 
 
 
