--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
     agent any 
-    environment { 
-3        docker_user = 'DOCKER_USER'
-4        docker_pass = 'DOCKER_PASS'
-6    }
+//     environment { 
+// 3        docker_user = 'DOCKER_USER'
+// 4        docker_pass = 'DOCKER_PASS'
+// 6    }
     stages {
        stage('build step') { 
            steps {
