--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
     properties([
     parameters([
         credentials(name: 'docker_user', credentialType: 'org.jenkinsci.plugins.plaincredentials.impl.StringCredentialsImpl', required: true)
+        credentials(name: 'docker_pass', credentialType: 'org.jenkinsci.plugins.plaincredentials.impl.StringCredentialsImpl', required: true)
     ])
 ])
     stages {
