--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -11,10 +11,17 @@ pipeline {
         stage('build step') { 
             steps {
                script {
-                withCredentials([string(credentialsId: 'docker_user', verible: 'DOCKER_USER'),
-                                string(credentialsId: 'docker_pass', verible: 'DOCKER_PASS')]) {
+                
+                 withCredentials([usernameColonPassword(credentialsId: 'docker_user', variable: 'DOCKER_USER')]) {
+    sh '''
+      set +x
+      curl -u "$DOCKER_USER" https://index.docker.io/ > output
+    '''
+  }
+                // withCredentials([string(credentialsId: 'docker_user', verible: 'DOCKER_USER'),
+                //                 string(credentialsId: 'docker_pass', verible: 'DOCKER_PASS')]) {
                 sh "echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin ${DOCKER_PASS}"
-                docker.withRegistry("https://index.docker.io/v1/") {
+                docker.withRegistry("https://index.docker.io/") {
                    def customImage = docker.build("${DOCKER_USER}/my-image:${env.BUILD_ID}", "-f nginx/Dockerfile .")
                    costomImage.push()
                    costomImage.push 'latest'
@@ -24,7 +31,7 @@ pipeline {
          }
       }
    }
-}
+// }
 
 
 
